--- a/css/mobileview.css
+++ b/css/mobileview.css
@@ -1,58 +1,110 @@
-h1 { 
-    font-family: 'verdana', sans-serif; 
-    font-weight: bold;
-    color: #3D4F31;
+
+#page {
+    display: none;
+    position: relative;
+    text-align:center;
 }
 
-h2,p { 
+#loading {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    background-color: #F0ECEB;
+    background-image: url("/images/loading.gif");
+    background-repeat: no-repeat;
+}
+
+
+h1,h2,p { 
     font-family: 'verdana', sans-serif; 
-    font-weight: 300; 
+    font-weight: 100; 
+}
+
+h2 { 
+    font-style: italic;
 }
 
 body {
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cdeeb1+26,d5fbbd+77,ddf7ca+97 */
-    background: #cdeeb1; /* Old browsers */
-/*
-    background: -moz-linear-gradient(top,#cdeeb1 16%,#d5fbbd 67%,#ddf7ca 87%); 
-    background: -webkit-linear-gradient(top,#cdeeb1 16%,#d5fbbd 67%,#ddf7ca 87%); 
-    background: linear-gradient(to bottom,#cdeeb1 16%,#d5fbbd 67%,#ddf7ca 87%); 
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdeeb1', endColorstr='#ddf7ca',GradientType=0 );
-*/
+    background: #F0ECEB; /* Old browsers */
 }
 
-div {
+
+
+div { 
     text-align: center;
 }
 
+.note{ 
+	font-size: 13px;
+	text-align: left;
+	width: 80%;
+	padding-left: 10%;
+	padding-left: 10%;
+}
+
+.topicName{ 
+	font-size: 20px;
+	font-weight: 100; 
+	text-align: left;
+	width: 100%;
+	color:#565A6E;
+	
+}
+
 .WordImage { 
-	width: 40%; height: auto;
-	border-radius: 5%;
+	width: 25%; height: 22%;
+	border-radius: 10px;
 	border:3px solid white;
+	-moz-box-shadow: 0 3px 2px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0 3px 2px rgba(0,0,0,0.1);
+	box-shadow: 0 3px 2px rgba(0,0,0,0.1);
+	transform-origin: 100% 0%;
+	-webkit-animation: fadeIn 0.2s ease-in-out;
+	animation: fadeIn 0.2s ease-in-out;
 }
 
 .exmp {
     font-family: 'verdana'; 
-    font-size: 20px;
-    font-size: 4.50vw;
-    color: #393939;
-    padding-left: 20px;
-    padding-right: 20px;
+    color: #585D69;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align:center;
 }
 
 #trgt {
-    margin: 5 auto;
-    width: 95%;
-    font-size: 20px;
-    font-size: 4.25vw;
-    text-shadow: 0 0 20px #DCFFBE, 0 0 20px #EDEEB1;
+    margin: 10 auto;
+    width: 90%;
+    font-size: 16px;
+    font-size: 2.25vw;
+    text-shadow: 0 0 30px #E2FDCF, 0 0 30px #DDF7CA;
+}
+
+#grmr {
+    margin: 10 auto;
+    width: 90%;
+    font-size: 16px;
+    font-size: 2.25vw;
+    text-shadow: 0 0 1px #BACFF0, 0 0 1px #BACFF0;
 }
 
 #srce {
-    margin: 5 auto;
-    width: 95%;
+    margin: 10 auto;
+    width: 80%;
     font-size: 14px;
-    font-size: 2.75vw;
+    font-size: 1.75vw;
 }
+
+#v_srce {
+    margin: 10 auto;
+    width: 80%;
+    font-size: 14px;
+    font-size: 1.75vw;
+}
+
 
 #dots {
     margin: 0 auto;
@@ -61,20 +113,44 @@ div {
 }
 
 
-.tainfo {
-    font-size: 8px;
-    color: #435937;
+.topic_info {
+    font-size: 13px;
+    color: #575757;
+    font-family: 'verdana', 'roboto'; 
+    border-collapse: collapse;
+	font-family: "verdana";
+}
+
+.topic_info a {
+	text-decoration: none;
+	color: #3E4B61;
+	background-color: #E3E8F0;
+	font-size: 11px;
+}
+
+.flascards_info {
+    font-size: 10px;
+    color: #6D9079;
+    font-family: 'verdana', 'roboto'; 
+    border-collapse: collapse;
+    font-weight: bold;
+}
+
+.viewer_info {
+    font-size: 10px;
+    color: #2A558F;
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
 }
 
-.tdinfo {
-}
-
 .floating-box-right {
+	font-family: 'verdana', 'roboto'; 
+	font-size: 12px;
+    color: #575757;
     float: right;
     width: auto;
     margin-right: 5px; 
+    vertical-align: middle; 
 }
 
 .fontsize {
@@ -82,14 +158,48 @@ div {
     
 }
 
-.iconss {
+.QuizButtons {
 	   text-align: center;
 	   position:absolute;
 	   width:100%;
 	   position:fixed;
 	   vertical-align:bottom;
-	   
 	}
+
+.ViewerButtons {
+	   text-align: center;
+	   width:60%;
+	   vertical-align:bottom;
+       margin-left: auto;
+        margin-right: auto;
+	}
+    
+.TestStartBtn {
+	   text-align: left;
+	   margin:10px;
+	   position:absolute;
+	   vertical-align:top;
+	}
+	
+.pronounce {
+    text-decoration: none;
+	}
+	
+#fscreen a:hover {
+	display: block;
+}
+
+#vscreen a:hover {
+	display: block;
+}
+/*
+#fscreen a:active {
+	position: relative;
+	background-repeat: no-repeat;
+	background-position: 100% 10%;
+}
+*/
+
 	
 /*
 @media all and (max-device-width: 720px){
@@ -98,7 +208,7 @@ div {
         margin: 0 auto;
         width: 80%;
         font-size: 40px;
-        font-size: 8.75vw;
+        font-size: 4.75vw;
     }
     
     #srce {
@@ -210,94 +320,305 @@ a.cursor {cursor:hand;}
     right: 5%;
 }
 
+#ViewerButtons {
+
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+body > button {
+    background: #428BCA;
+    transition: all 0.3s ease 0s;
+}
+
+.center {
+    position: fixed;
+    bottom: 15px;
+    width: 99%;
+}
 
 .btnShow {
-  font-size: 14px;
-  width: 98%;
-  font-size: 3.65vw;
+  font-size: 10px;
+  font-size: 1.20vw;
   text-align: center;
-  color: #436D3A;
-  background: #E5F9CC;
+  color: #4F634B;
+  background: #DCF0C4;
   width: 28%;
   height: 50px;
   border: 0px;
-/*
-  vertical-align:top;
-*/
   cursor:hand;
   border-radius: 6px;
+  background-size:32px 32px;
 }
 
 .btnShow:hover {
-  font-size: 14px;
-  font-size: 3.65vw;
-  text-align: center;
   color: #3D8134;
-  width: 28%;
   height: 50px;
-  border: 0px solid #436C2B;
-/*
-  vertical-align:top;
-*/
   cursor:hand;
   border-radius: 6px;
+  background-size:32px 32px;
+  
 }
+
 
 .btnOk {
   font-size: 15px;
-  font-size: 4.95vw;
+  font-size: 1.95vw;
   text-align: center;
   font-weight: bold;
-  color: #FFFFFF;
-  background: #9BCA73;
+  color: #E6E6FA;
+  background: #A2D07D;
   width: 28%;
   height: 50px;
   border: 0px solid #436C2B;
   border-radius: 8px;
-
+  transition: all 0.2s ease 0s;
 }
 
 .btnOk:hover {
   font-size: 15px;
-  font-size: 4.95vw;
+  font-size: 1.95vw;
   text-align: center;
-  color: #FFFFFF;
-  background: #88C74F;
+  color: #E6E6FA;
+  background: #66A42F;
   font-weight: bold;
   width: 28%;
   height: 50px;
   border: 0px;
   border-radius: 8px;
-
+  transition: all 0.4s ease 0s;
 }
+
 
 .btnNo {
   font-size: 15px;
-  font-size: 4.95vw;
+  font-size: 1.95vw;
   text-align: center;
   font-weight: bold;
-  color: #FFFFFF;
-  background: #D49DA3;
+  color: #E6E6FA;
+  background: #DE939A;
   width: 28%;
   height: 50px;
   border-radius: 8px;
   border: 0px solid #436C2B;
-
+  transition: all 0.2s ease 0s;
 }
 
 .btnNo:hover {
   font-size: 15px;
-  font-size: 4.95vw;
+  font-size: 1.95vw;
   text-align: center;
-  color: #FFFFFF;
-  background: #D77C95;
+  color: #E6E6FA;
+  background: #C55171;
   font-weight: bold;
   width: 28%;
   height: 50px;
   border: 0px;
   border-radius: 8px;
+  transition: all 0.4s ease 0s;
+}
+
+.btnNext {
+  font-size: 15px;
+  font-size: 1.95vw;
+  text-align: center;
+  font-weight: bold;
+  color: #E6E6FA;
+  background: #98ccfd;
+  width: 100%;
+  height: 50px;
+  border-radius: 8px;
+  border: 0px solid #436C2B;
+  transition: all 0.2s ease 0s;
+}
+
+.btnNext:hover {
+  font-size: 15px;
+  font-size: 1.95vw;
+  text-align: center;
+  color: #E6E6FA;
+  background: #98ccfd;
+  font-weight: bold;
+  width: 100%;
+  height: 50px;
+  border: 0px;
+  border-radius: 8px;
+  transition: all 0.4s ease 0s;
+  
+}
+
+.btnPlay {
+  vertical-align: top;
+  border-radius: 6px;
+  opacity: 0.7;
+}
+
+.btnPlay:hover {
+  vertical-align: top;
+  border-radius: 6px;
+  opacity: 1;
+}
+
+.btnBack {
+  font-size: 15px;
+  font-size: 1.95vw;
+  text-align: center;
+  font-weight: bold;
+  color: #E6E6FA;
+  background: #98ccfd;
+  width: 100%;
+  height: 50px;
+  border: 0px solid #436C2B;
+  border-radius: 8px;
+  transition: all 0.2s ease 0s;
+}
+
+.btnBack:hover {
+  font-size: 15px;
+  font-size: 1.95vw;
+  text-align: center;
+  color: #E6E6FA;
+  background: #98ccfd;
+  font-weight: bold;
+  width: 100%;
+  height: 50px;
+  border: 0px;
+  border-radius: 8px;
+  transition: all 0.4s ease 0s;
+}
+
+.slidecontainer {
+  width: 100%;
+/*
+  bottom: 18%;
+  position: fixed;
+*/
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 13px;
+  background: #BAEFFA;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 13px;
+  height: 13px;
+  background: #fff;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.slider::-moz-range-thumb {
+  width: 13px;
+  height: 13px;
+  background: #BAEFFA;
+  cursor: pointer;
+}
+
+.help-tip{
+	position: absolute;
+	top: 18px;
+	right: 18px;
+	text-align: center;
+	background-color: #BCDBEA;
+	border-radius: 50%;
+	width: 24px;
+	height: 24px;
+	font-size: 14px;
+	line-height: 26px;
+	cursor: default;
+}
+
+.help-tip:before{
+	content:'?';
+	font-weight: bold;
+	color:#fff;
+}
+
+.help-tip:hover p{
+	display:block;
+	transform-origin: 100% 0%;
+	-webkit-animation: fadeIn 0.3s ease-in-out;
+	animation: fadeIn 0.3s ease-in-out;
 
 }
 
+.help-tip p{	/* The tooltip */
+	display: none;
+	text-align: left;
+	background-color: #1E2021;
+	padding: 20px;
+	width: 300px;
+	position: absolute;
+	border-radius: 3px;
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	right: -4px;
+	color: #FFF;
+	font-size: 13px;
+	line-height: 1.4;
+}
+
+.help-tip p:before{ /* The pointer of the tooltip */
+	position: absolute;
+	content: '';
+	width:0;
+	height: 0;
+	border:6px solid transparent;
+	border-bottom-color:#1E2021;
+	right:10px;
+	top:-12px;
+}
+
+.help-tip p:after{ /* Prevents the tooltip from being hidden */
+	width:100%;
+	height:40px;
+	content:'';
+	position: absolute;
+	top:-40px;
+	left:0;
+}
+
+#sco {
+    color: blue;
+}
+
+
+
+hr{
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+/* CSS animation */
+
+@-webkit-keyframes fadeIn {
+	0% { 
+		opacity:0; 
+		transform: scale(0.6);
+	}
+
+	100% {
+		opacity:100%;
+		transform: scale(1);
+	}
+}
+
+@keyframes fadeIn {
+	0% { opacity:0; }
+	100% { opacity:100%; }
+}
 
 
