--- a/css/view.css
+++ b/css/view.css
@@ -42,8 +42,7 @@ div {
 	font-size: 13px;
 	text-align: left;
 	width: 80%;
-	padding-left: 10%;
-	padding-left: 10%;
+    margin: 25 0 0 25;
 }
 
 .topicName{ 
@@ -56,7 +55,7 @@ div {
 }
 
 .WordImage { 
-	width: 25%; height: 22%;
+	width: 23%; height: 22%;
 	border-radius: 10px;
 	border:3px solid white;
 	-moz-box-shadow: 0 3px 2px rgba(0,0,0,0.1);
@@ -119,6 +118,7 @@ div {
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
 	font-family: "verdana";
+    margin: 15 0 0 25;
 }
 
 .topic_info a {
@@ -168,7 +168,7 @@ div {
 
 .ViewerButtons {
 	   text-align: center;
-	   width:60%;
+	   width:40%;
 	   vertical-align:bottom;
        margin-left: auto;
         margin-right: auto;
@@ -179,6 +179,8 @@ div {
 	   margin:10px;
 	   position:absolute;
 	   vertical-align:top;
+       margin: 15 0 0 25;
+       
 	}
 	
 .pronounce {
