--- a/css/view.css
+++ b/css/view.css
@@ -130,10 +130,11 @@ div {
 
 .flascards_info {
     font-size: 10px;
-    color: #6D9079;
+    font-size: 0.90vw;
+    color: #4F634B;
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
-    font-weight: bold;
+    margin: 0 0 0 10;
 }
 
 .viewer_info {
@@ -161,7 +162,7 @@ div {
 .QuizButtons {
 	   text-align: center;
 	   position:absolute;
-	   width:100%;
+	   width:60%;
 	   position:fixed;
 	   vertical-align:bottom;
 	}
@@ -306,7 +307,7 @@ a.cursor {cursor:hand;}
 #Wrong {
     position: fixed;
     bottom: 15px;
-    left: 5%; 
+    left: 15%; 
 }
 
 #Show {
@@ -319,7 +320,7 @@ a.cursor {cursor:hand;}
 #Right {
     position: fixed;
     bottom: 15px;
-    right: 5%;
+    right: 15%;
 }
 
 #ViewerButtons {
@@ -371,7 +372,7 @@ body > button {
   font-weight: bold;
   color: #E6E6FA;
   background: #A2D07D;
-  width: 28%;
+  width: 22%;
   height: 50px;
   border: 0px solid #436C2B;
   border-radius: 8px;
@@ -385,9 +386,6 @@ body > button {
   color: #E6E6FA;
   background: #66A42F;
   font-weight: bold;
-  width: 28%;
-  height: 50px;
-  border: 0px;
   border-radius: 8px;
   transition: all 0.4s ease 0s;
 }
@@ -400,8 +398,9 @@ body > button {
   font-weight: bold;
   color: #E6E6FA;
   background: #DE939A;
-  width: 28%;
+  width: 22%;
   height: 50px;
+  border: 0px;
   border-radius: 8px;
   border: 0px solid #436C2B;
   transition: all 0.2s ease 0s;
@@ -414,9 +413,6 @@ body > button {
   color: #E6E6FA;
   background: #C55171;
   font-weight: bold;
-  width: 28%;
-  height: 50px;
-  border: 0px;
   border-radius: 8px;
   transition: all 0.4s ease 0s;
 }
@@ -453,13 +449,13 @@ body > button {
 .btnPlay {
   vertical-align: top;
   border-radius: 6px;
-  opacity: 0.7;
+  opacity: 1;
 }
 
 .btnPlay:hover {
   vertical-align: top;
   border-radius: 6px;
-  opacity: 1;
+  opacity: 0.7;
 }
 
 .btnBack {
@@ -501,16 +497,16 @@ body > button {
 .slider {
   -webkit-appearance: none;
   width: 100%;
-  height: 13px;
+  height: 14px;
   background: #BAEFFA;
   outline: none;
-  opacity: 0.7;
+  opacity: 1;
   -webkit-transition: .2s;
   transition: opacity .2s;
 }
 
 .slider:hover {
-  opacity: 1;
+  opacity: 0.7;
 }
 
 .slider::-webkit-slider-thumb {
@@ -598,7 +594,6 @@ body > button {
 }
 
 
-
 hr{
     border: 0;
     height: 1px;
@@ -622,5 +617,3 @@ hr{
 	0% { opacity:0; }
 	100% { opacity:100%; }
 }
-
-
