--- a/css/view.css
+++ b/css/view.css
@@ -16,6 +16,7 @@
     background-color: #F0ECEB;
     background-image: url("/images/loading.gif");
     background-repeat: no-repeat;
+    margin: 15 0 0 25;
 }
 
 
