--- a/css/mobileview.css
+++ b/css/mobileview.css
@@ -13,7 +13,7 @@
     z-index: 100;
     width: 100vw;
     height: 100vh;
-    background-color: #F0ECEB;
+    background-color: transparent;
     background-image: url("/images/loading.gif");
     background-repeat: no-repeat;
 }
@@ -21,11 +21,11 @@
 
 h1,h2,p { 
     font-family: 'verdana', sans-serif; 
-    font-weight: 100; 
 }
 
 h2 { 
     font-style: italic;
+    font-weight: normal;
 }
 
 body {
@@ -41,14 +41,14 @@ div {
 .note{ 
 	font-size: 13px;
 	text-align: left;
-	width: 80%;
-	padding-left: 10%;
-	padding-left: 10%;
+	width: 50%;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
 .topicName{ 
-	font-size: 20px;
-	font-weight: 100; 
+	font-size: 18px;
+	font-weight: 40; 
 	text-align: left;
 	width: 100%;
 	color:#565A6E;
@@ -56,7 +56,7 @@ div {
 }
 
 .WordImage { 
-	width: 25%; height: 22%;
+	width: 150px; height: 100px;
 	border-radius: 10px;
 	border:3px solid white;
 	-moz-box-shadow: 0 3px 2px rgba(0,0,0,0.1);
@@ -70,51 +70,47 @@ div {
 .exmp {
     font-family: 'verdana'; 
     color: #585D69;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 2%;
+    padding-right: 2%;
+    bottom:15px;
     text-align:center;
 }
 
 #trgt {
-    margin: 10 auto;
+    margin: 0 auto;
     width: 90%;
     font-size: 16px;
-    font-size: 2.25vw;
     text-shadow: 0 0 30px #E2FDCF, 0 0 30px #DDF7CA;
 }
 
 #grmr {
-    margin: 10 auto;
+    margin: o auto;
     width: 90%;
     font-size: 16px;
-    font-size: 2.25vw;
     text-shadow: 0 0 1px #BACFF0, 0 0 1px #BACFF0;
 }
 
 #srce {
-    margin: 10 auto;
+    margin: 0 auto;
     width: 80%;
     font-size: 14px;
-    font-size: 1.75vw;
 }
 
 #v_srce {
-    margin: 10 auto;
+    margin: 0 auto;
     width: 80%;
     font-size: 14px;
-    font-size: 1.75vw;
 }
 
 
 #dots {
     margin: 0 auto;
     width: 80%;
-    font-size: 1.75vw;
 }
 
 
 .topic_info {
-    font-size: 13px;
+    font-size: 12px;
     color: #575757;
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
@@ -125,15 +121,16 @@ div {
 	text-decoration: none;
 	color: #3E4B61;
 	background-color: #E3E8F0;
-	font-size: 11px;
+	font-size: 12px;
+    font-weight: bold;
 }
 
 .flascards_info {
-    font-size: 10px;
+    font-size: 9px;
     color: #6D9079;
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
-    font-weight: bold;
+    
 }
 
 .viewer_info {
@@ -176,9 +173,8 @@ div {
     
 .TestStartBtn {
 	   text-align: left;
-	   margin:10px;
-	   position:absolute;
 	   vertical-align:top;
+       margin: 0 0 0 0;
 	}
 	
 .pronounce {
@@ -187,10 +183,15 @@ div {
 	
 #fscreen a:hover {
 	display: block;
+    top:10px;
+    vertical-align: top;
+    
 }
 
 #vscreen a:hover {
 	display: block;
+    top:0px;
+    vertical-align: top;
 }
 /*
 #fscreen a:active {
@@ -303,25 +304,24 @@ a.cursor {cursor:hand;}
 
 #Wrong {
     position: fixed;
-    bottom: 15px;
-    left: 5%; 
+    bottom: 5px;
+    left: 5px; 
 }
 
 #Show {
     position: fixed;
-    bottom: 15px;
+    bottom: 5px;
     right: 36%;
     left: 36%;
 }
 
 #Right {
     position: fixed;
-    bottom: 15px;
-    right: 5%;
+    bottom: 5px;
+    right: 5px;
 }
 
 #ViewerButtons {
-
     margin-left: auto;
     margin-right: auto;
 
@@ -334,13 +334,12 @@ body > button {
 
 .center {
     position: fixed;
-    bottom: 15px;
+    bottom: 0px;
     width: 99%;
 }
 
 .btnShow {
   font-size: 10px;
-  font-size: 1.20vw;
   text-align: center;
   color: #4F634B;
   background: #DCF0C4;
@@ -354,22 +353,16 @@ body > button {
 
 .btnShow:hover {
   color: #3D8134;
-  height: 50px;
-  cursor:hand;
-  border-radius: 6px;
-  background-size:32px 32px;
-  
 }
 
 
 .btnOk {
-  font-size: 15px;
-  font-size: 1.95vw;
+  font-size: 18px;
   text-align: center;
   font-weight: bold;
   color: #E6E6FA;
   background: #A2D07D;
-  width: 28%;
+  width: 30%;
   height: 50px;
   border: 0px solid #436C2B;
   border-radius: 8px;
@@ -377,28 +370,19 @@ body > button {
 }
 
 .btnOk:hover {
-  font-size: 15px;
-  font-size: 1.95vw;
-  text-align: center;
   color: #E6E6FA;
   background: #66A42F;
-  font-weight: bold;
-  width: 28%;
-  height: 50px;
-  border: 0px;
-  border-radius: 8px;
   transition: all 0.4s ease 0s;
 }
 
 
 .btnNo {
-  font-size: 15px;
-  font-size: 1.95vw;
+  font-size: 18px;
   text-align: center;
   font-weight: bold;
   color: #E6E6FA;
   background: #DE939A;
-  width: 28%;
+  width: 30%;
   height: 50px;
   border-radius: 8px;
   border: 0px solid #436C2B;
@@ -406,22 +390,13 @@ body > button {
 }
 
 .btnNo:hover {
-  font-size: 15px;
-  font-size: 1.95vw;
-  text-align: center;
   color: #E6E6FA;
   background: #C55171;
-  font-weight: bold;
-  width: 28%;
-  height: 50px;
-  border: 0px;
-  border-radius: 8px;
   transition: all 0.4s ease 0s;
 }
 
 .btnNext {
   font-size: 15px;
-  font-size: 1.95vw;
   text-align: center;
   font-weight: bold;
   color: #E6E6FA;
@@ -434,16 +409,8 @@ body > button {
 }
 
 .btnNext:hover {
-  font-size: 15px;
-  font-size: 1.95vw;
-  text-align: center;
   color: #E6E6FA;
   background: #98ccfd;
-  font-weight: bold;
-  width: 100%;
-  height: 50px;
-  border: 0px;
-  border-radius: 8px;
   transition: all 0.4s ease 0s;
   
 }
@@ -451,18 +418,17 @@ body > button {
 .btnPlay {
   vertical-align: top;
   border-radius: 6px;
-  opacity: 0.7;
+  opacity: 1;
 }
 
 .btnPlay:hover {
   vertical-align: top;
   border-radius: 6px;
-  opacity: 1;
+  opacity: 0.7;
 }
 
 .btnBack {
   font-size: 15px;
-  font-size: 1.95vw;
   text-align: center;
   font-weight: bold;
   color: #E6E6FA;
@@ -475,16 +441,9 @@ body > button {
 }
 
 .btnBack:hover {
-  font-size: 15px;
-  font-size: 1.95vw;
-  text-align: center;
   color: #E6E6FA;
   background: #98ccfd;
   font-weight: bold;
-  width: 100%;
-  height: 50px;
-  border: 0px;
-  border-radius: 8px;
   transition: all 0.4s ease 0s;
 }
 
@@ -502,13 +461,13 @@ body > button {
   height: 13px;
   background: #BAEFFA;
   outline: none;
-  opacity: 0.7;
+  opacity: 1;
   -webkit-transition: .2s;
   transition: opacity .2s;
 }
 
 .slider:hover {
-  opacity: 1;
+  opacity: o.7;
 }
 
 .slider::-webkit-slider-thumb {
