--- a/css/mobileview.css
+++ b/css/mobileview.css
@@ -18,7 +18,6 @@
     background-repeat: no-repeat;
 }
 
-
 h1,h2,p { 
     font-family: 'verdana', sans-serif; 
 }
@@ -32,8 +31,6 @@ body {
     background: #F0ECEB; /* Old browsers */
 }
 
-
-
 div { 
     text-align: center;
 }
@@ -41,9 +38,11 @@ div {
 .note{ 
 	font-size: 13px;
 	text-align: left;
-	width: 50%;
+	width: 80%;
 	padding-left: 5px;
 	padding-right: 5px;
+    margin: 5px;
+    float: left;
 }
 
 .topicName{ 
@@ -102,12 +101,10 @@ div {
     font-size: 14px;
 }
 
-
 #dots {
     margin: 0 auto;
     width: 80%;
 }
-
 
 .topic_info {
     font-size: 12px;
@@ -127,10 +124,9 @@ div {
 
 .flascards_info {
     font-size: 9px;
-    color: #6D9079;
+    color: #FFFFFF;
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
-    
 }
 
 .viewer_info {
@@ -554,8 +550,6 @@ body > button {
     color: blue;
 }
 
-
-
 hr{
     border: 0;
     height: 1px;
@@ -579,5 +573,3 @@ hr{
 	0% { opacity:0; }
 	100% { opacity:100%; }
 }
-
-
