--- a/css/view.css
+++ b/css/view.css
@@ -131,11 +131,12 @@ div {
 
 .flascards_info {
     font-size: 10px;
-    font-size: 0.90vw;
-    color: #4F634B;
+    font-size: 0.70vw;
+    color: #FFFFFF;
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
     margin: 0 0 0 10;
+    font-weight: bold;
 }
 
 .viewer_info {
@@ -354,9 +355,10 @@ body > button {
   cursor:hand;
   border-radius: 6px;
   background-size:32px 32px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-.btnShow:hover {
+.btnShow:active {
   color: #3D8134;
   height: 50px;
   cursor:hand;
@@ -378,9 +380,10 @@ body > button {
   border: 0px solid #436C2B;
   border-radius: 8px;
   transition: all 0.2s ease 0s;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-.btnOk:hover {
+.btnOk:active {
   font-size: 15px;
   font-size: 1.95vw;
   text-align: center;
@@ -405,9 +408,10 @@ body > button {
   border-radius: 8px;
   border: 0px solid #436C2B;
   transition: all 0.2s ease 0s;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-.btnNo:hover {
+.btnNo:active {
   font-size: 15px;
   font-size: 1.95vw;
   text-align: center;
@@ -432,7 +436,7 @@ body > button {
   transition: all 0.2s ease 0s;
 }
 
-.btnNext:hover {
+.btnNext:active {
   font-size: 15px;
   font-size: 1.95vw;
   text-align: center;
@@ -453,7 +457,7 @@ body > button {
   opacity: 1;
 }
 
-.btnPlay:hover {
+.btnPlay:active {
   vertical-align: top;
   border-radius: 6px;
   opacity: 0.7;
@@ -473,7 +477,7 @@ body > button {
   transition: all 0.2s ease 0s;
 }
 
-.btnBack:hover {
+.btnBack:active {
   font-size: 15px;
   font-size: 1.95vw;
   text-align: center;
@@ -506,7 +510,7 @@ body > button {
   transition: opacity .2s;
 }
 
-.slider:hover {
+.slider:active {
   opacity: 0.7;
 }
 
