--- a/css/view.css
+++ b/css/view.css
@@ -119,7 +119,7 @@ div {
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
 	font-family: "verdana";
-    margin: 15 0 0 25;
+    margin: 10 0 0 22;
 }
 
 .topic_info a {
@@ -348,7 +348,7 @@ body > button {
   font-size: 1.20vw;
   text-align: center;
   color: #4F634B;
-  background: #DCF0C4;
+  background: #FFFFFF;
   width: 28%;
   height: 50px;
   border: 0px;
@@ -374,7 +374,7 @@ body > button {
   text-align: center;
   font-weight: bold;
   color: #E6E6FA;
-  background: #A2D07D;
+  background: #86C754;
   width: 22%;
   height: 50px;
   border: 0px solid #436C2B;
@@ -401,7 +401,7 @@ body > button {
   text-align: center;
   font-weight: bold;
   color: #E6E6FA;
-  background: #DE939A;
+  background: #D47D85;
   width: 22%;
   height: 50px;
   border: 0px;
