--- a/css/view.css
+++ b/css/view.css
@@ -39,12 +39,7 @@ div {
     text-align: center;
 }
 
-.note{ 
-	font-size: 13px;
-	text-align: left;
-	width: 80%;
-    margin: 25 0 0 25;
-}
+
 
 .topicName{ 
 	font-size: 20px;
@@ -119,7 +114,7 @@ div {
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
 	font-family: "verdana";
-    margin: 10 0 0 22;
+    margin: 8 0 0 15;
 }
 
 .topic_info a {
@@ -127,6 +122,23 @@ div {
 	color: #3E4B61;
 	background-color: #E3E8F0;
 	font-size: 11px;
+}
+
+.note{ 
+	font-size: 13px;
+	text-align: left;
+	width: 80%;
+    margin: 25 0 0 15;
+    max-width: 700px;
+}
+
+.TestStartBtn {
+	   text-align: left;
+	   margin:10px;
+	   position:absolute;
+	   vertical-align:top;
+       margin: 10 0 0 15;
+       
 }
 
 .flascards_info {
@@ -177,15 +189,6 @@ div {
         margin-right: auto;
 	}
     
-.TestStartBtn {
-	   text-align: left;
-	   margin:10px;
-	   position:absolute;
-	   vertical-align:top;
-       margin: 15 0 0 25;
-       
-	}
-	
 .pronounce {
     text-decoration: none;
 	}
