--- a/css/mobileview.css
+++ b/css/mobileview.css
@@ -35,15 +35,6 @@ div {
     text-align: center;
 }
 
-.note{ 
-	font-size: 13px;
-	text-align: left;
-	width: 80%;
-	padding-left: 5px;
-	padding-right: 5px;
-    margin: 5px;
-    float: left;
-}
 
 .topicName{ 
 	font-size: 18px;
@@ -116,15 +107,31 @@ div {
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
 	font-family: "verdana";
-    margin: 2 0 0 5;
+    margin: 2 0 0 2;
 }
 
 .topic_info a {
 	text-decoration: none;
 	color: #3E4B61;
 	background-color: #E3E8F0;
-	font-size: 12px;
     font-weight: bold;
+}
+
+.note{ 
+	font-size: 13px;
+	text-align: left;
+	width: 80%;
+	padding-left: 5px;
+	padding-right: 5px;
+    float: left;
+    max-width: 400px;
+    margin: 2 0 0 2;
+}
+
+.TestStartBtn {
+    text-align: left;
+    vertical-align:top;
+    margin: 0 0 0 2;
 }
 
 .flascards_info {
@@ -170,12 +177,6 @@ div {
 	   vertical-align:bottom;
        margin-left: auto;
         margin-right: auto;
-	}
-    
-.TestStartBtn {
-	   text-align: left;
-	   vertical-align:top;
-        margin: 0 0 0 5;
 	}
 	
 .pronounce {
@@ -562,7 +563,8 @@ box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 hr{
     border: 0;
     height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
+    margin: 0 0 0 22;
 }
 /* CSS animation */
 
