--- a/css/mobilehome.css
+++ b/css/mobilehome.css
@@ -407,6 +407,19 @@ img.expand {
     font-size: 20px;
 }
 
+.morecontent span {
+    display: none;
+    position:relative;
+}
+
+#comment {
+    position:relative;
+}
+
+.more {
+    position:relative;
+}
+
 .footer {
     width: 90%;
     font-size: 9px;
@@ -414,4 +427,13 @@ img.expand {
     color: #999;
     margin-right: 5%;
     margin-left: 5%;
+}
+
+.fancybox-slide--iframe .fancybox-content {
+	width  : 75%;
+	height : 90%;
+	max-width  : 80%;
+	max-height : 95%;
+	margin: 50;
+    background: transparent;
 }
