--- a/css/mobileview.css
+++ b/css/mobileview.css
@@ -5,6 +5,13 @@
     text-align:center;
 }
 
+#stu {
+    display: none;
+    position: relative;
+    text-align:center;
+}
+
+
 #loading {
     display: block;
     position: absolute;
@@ -74,7 +81,7 @@ div {
 }
 
 #grmr {
-    margin: o auto;
+    margin: 0 auto;
     width: 90%;
     font-size: 16px;
     text-shadow: 0 0 1px #BACFF0, 0 0 1px #BACFF0;
@@ -91,6 +98,11 @@ div {
     width: 80%;
     font-size: 14px;
 }
+
+#stu {
+
+}
+
 
 #info {
 
@@ -464,7 +476,7 @@ box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   -webkit-appearance: none;
   width: 100%;
   height: 13px;
-  background: #BAEFFA;
+  background: #DFDFDF;
   outline: none;
   opacity: 1;
   -webkit-transition: .2s;
@@ -472,7 +484,7 @@ box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .slider:active {
-  opacity: o.7;
+  opacity: 0.7;
 }
 
 .slider::-webkit-slider-thumb {
@@ -480,7 +492,7 @@ box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   appearance: none;
   width: 13px;
   height: 13px;
-  background: #fff;
+  background: #5B4B4B;
   cursor: pointer;
   opacity: 1;
 }
@@ -488,7 +500,7 @@ box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 .slider::-moz-range-thumb {
   width: 13px;
   height: 13px;
-  background: #BAEFFA;
+  background: #FFFFFF;
   cursor: pointer;
 }
 
