--- a/css/view.css
+++ b/css/view.css
@@ -505,7 +505,7 @@ body > button {
   -webkit-appearance: none;
   width: 100%;
   height: 14px;
-  background: #BAEFFA;
+  background: #DFDFDF;
   outline: none;
   opacity: 1;
   -webkit-transition: .2s;
@@ -521,7 +521,7 @@ body > button {
   appearance: none;
   width: 13px;
   height: 13px;
-  background: #fff;
+  background: #5B4B4B;
   cursor: pointer;
   opacity: 1;
 }
@@ -529,7 +529,7 @@ body > button {
 .slider::-moz-range-thumb {
   width: 13px;
   height: 13px;
-  background: #BAEFFA;
+  background: #FFFFFF;
   cursor: pointer;
 }
 
@@ -604,7 +604,7 @@ body > button {
 hr{
     border: 0;
     height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0));
 }
 /* CSS animation */
 
